Control de errores y ejecucion de metodos

--- a/AddedValue/Interface/Interface/src/pkginterface/GUI.form
+++ b/AddedValue/Interface/Interface/src/pkginterface/GUI.form
@@ -77,6 +77,7 @@
                           <Component id="txtfppx" max="32767" attributes="0"/>
                       </Group>
                   </Group>
+                  <Component id="btnExecute" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="449" max="32767" attributes="0"/>
           </Group>
@@ -133,7 +134,9 @@
                   <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txtIter" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="246" max="32767" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="btnExecute" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="200" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -267,6 +270,14 @@
         <Property name="toolTipText" type="java.lang.String" value=""/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnExecute">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Execute"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnExecuteActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
